# digital_rf_read

c/: CMakeLists.txt
c/examples/: CMakeLists.txt  example_rf_read_hdf5.c
c/include/: digital_rf.h
c/lib/: rf_read_hdf5.c
c/tests/: CMakeLists.txt  example_rf_read_hdf5.c
python/examples/: rf_read_compare2c.py
